--- a/api/external/api-kerberos.yaml
+++ b/api/external/api-kerberos.yaml
@@ -12,6 +12,7 @@ tags:
 paths:
   /v1/kerberos:
     get:
+      x-product: CyberEngine,OceanProtect X
       x-impact-subsystem: 不影响
       x-access-port: 25081
       x-auth-required: 'Y'
@@ -65,6 +66,8 @@ paths:
         - Authorization:
             - global
     post:
+      x-product: CyberEngine,OceanProtect X
+      x-dm-role: 'N'
       x-impact-subsystem: 不影响
       x-access-port: 25081
       x-auth-required: 'Y'
@@ -93,6 +96,7 @@ paths:
           required: true
           schema:
             type: string
+          type: string
         - name: keytabFile
           in: formData
           description: keytab文件
@@ -107,21 +111,24 @@ paths:
           name: name
           description: 名称
           required: true
-          pattern: '^[a-zA-Z0-9]{1,64}$'
+          pattern: ^[a-zA-Z0-9]{1,64}$
           schema:
             type: string
+          type: string
         - in: formData
           name: password
           description: 密码
           required: false
           schema:
             type: string
+          type: string
         - in: formData
           name: principalName
           description: 主体名
           required: true
           schema:
             type: string
+          type: string
       responses:
         '200':
           description: OK
@@ -139,8 +146,10 @@ paths:
       security:
         - Authorization:
             - global
-  '/v1/kerberos/{kerberos_id}':
+  /v1/kerberos/{kerberos_id}:
     post:
+      x-product: CyberEngine,OceanProtect X
+      x-dm-role: 'N'
       x-impact-subsystem: 不影响
       x-access-port: 25081
       x-auth-required: 'Y'
@@ -169,6 +178,7 @@ paths:
           required: false
           schema:
             type: string
+          type: string
         - name: kerberos_id
           in: path
           description: Kerberos ID
@@ -188,21 +198,24 @@ paths:
           name: name
           description: 名称
           required: true
-          pattern: '^[a-zA-Z0-9]{1,64}$'
+          pattern: ^[a-zA-Z0-9]{1,64}$
           schema:
             type: string
+          type: string
         - in: formData
           name: password
           description: 密码
           required: false
           schema:
             type: string
+          type: string
         - in: formData
           name: principalName
           description: 主体名
           required: false
           schema:
             type: string
+          type: string
       responses:
         '200':
           description: OK
@@ -218,6 +231,8 @@ paths:
         - Authorization:
             - global
     delete:
+      x-product: CyberEngine,OceanProtect X
+      x-dm-role: 'N'
       x-impact-subsystem: 不影响
       x-access-port: 25081
       x-auth-required: 'Y'
