--- a/api/external/api-protection-access-framework.yaml
+++ b/api/external/api-protection-access-framework.yaml
@@ -10,8 +10,68 @@ tags:
   - name: access-point-controller
     description: Access Point Controller
 paths:
+  /v1/backup/action/import:
+    post:
+      x-product: OceanProtect X
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
+      tags:
+        - access-point-controller
+      summary: importCopy
+      operationId: importCopyUsingPOST_1
+      consumes:
+        - application/json
+      produces:
+        - '*/*'
+      parameters:
+        - name: X-Auth-Token
+          in: header
+          description: Access token
+          required: true
+          type: string
+        - in: body
+          name: importParam
+          description: importParam
+          required: true
+          schema:
+            $ref: '#/definitions/CopyReplicationImport'
+            originalRef: CopyReplicationImport
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: boolean
+        '201':
+          description: Created
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+      security:
+        - Authorization:
+            - global
+      deprecated: false
   /v1/backup/cluster:
     post:
+      x-product: OceanProtect X
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       tags:
         - access-point-controller
       summary: 查询备份副本资源
@@ -31,27 +91,23 @@ paths:
           description: 副本ID
           required: true
           type: string
-          allowEmptyValue: false
         - name: count
           in: query
           description: 查询数量
           required: true
           type: integer
           format: int32
-          allowEmptyValue: false
         - name: index
           in: query
           description: 索引，从某条开始查询
           required: true
           type: integer
           format: int32
-          allowEmptyValue: false
         - name: path
           in: query
           description: 资源路径
           required: false
           type: string
-          allowEmptyValue: false
       responses:
         '200':
           description: OK
@@ -428,7 +484,7 @@ definitions:
         description: 创建时间
       enable_status:
         type: string
-        description: '激活状态[取值范围]activated:激活 disabled:禁用'
+        description: 激活状态[取值范围]activated:激活 disabled:禁用
       id:
         type: string
         description: 即时挂载主键
